--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,12 @@
   --background-toggle: #fff;
   --box-shadow-toggle: inset 0 4px 12px rgba(0, 0, 0, 0.05),
     inset 0 3px 3px rgba(255, 255, 255, 0.16),
-    inset 0 -3px 6px rgba(255, 255, 255, 0.22);
+    inset 0 -3px 6px rgba(228, 228, 228, 0.22);
   transition: all 0.5s ease-in-out;
 }
 
 html.dark {
-  --primary: #000;
+  --primary: #2b2b2b;
   --secondary: #fff;
   --opacity: 0.15;
   --inset-opacity: 0.1;
@@ -101,6 +101,7 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 100px;
 }
 
 .time {
@@ -161,4 +162,40 @@ body {
   transform: translate(-50%, -50%) rotate(0deg);
   background-color: #c53a3a;
   border-radius: 50%;
+}
+
+footer {
+  width: 100vw;
+  position: fixed;
+  bottom: 0;
+  height: 50px;
+  font-size: 1.2em;
+  background-color: (var--primary);
+  color: var(--secondary);
+  text-align: center;
+  line-height: 50px;
+}
+
+footer a {
+  position: relative;
+  text-decoration: none;
+  color: var(--secondary);
+  /* transition: all 0.2s; */
+  padding-bottom: 2px;
+}
+
+footer a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0%;
+  height: 1px;
+  background: var(--secondary);
+  transition: 0.3s ease-out;
+}
+
+footer a:hover::after {
+  left: 0%;
+  width: 100%;
 }
